# openstack-cli

./: .envrc-dist  Makefile  README.md
.github/: dependabot.yml
.github/workflows/: pr.yml  publish.yml
rootfs/: Dockerfile
rootfs/workspace/: pyproject.toml
