[tool.poetry]
name = "runway-os-shell"
version = "0.1.0"
description = ""
authors = ["till <till@planetary-quantum.com>"]
license = "BSD-2-Clause"

[tool.poetry.dependencies]
python = "^3.10"
python-openstackclient = "^6.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
